--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "jest": "^24.8.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watchAll --notify"
   },
   "dependencies": {}
 }
